@@ -1,3 +1,8 @@
+2004-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-group.el (gnus-group-make-rss-group): Unify non-ASCII group
+	names.
+
 2004-12-16  Simon Josefsson  <jas@extundo.com>
 
 	* hashcash.el (hashcash-payment-alist): Fix custom :type.
